# chess26

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/common/: file.hpp
src/engine/: engine_manager.hpp
src/engine/eval/: book.cpp
src/engine/search/: worker.cpp  worker.hpp
src/interface/: uci.hpp  uci_option.hpp
